volexc/tests/ui/parse_missing_semicolon_struct.vol
// Missing semicolon in struct field
struct Point {
    x: u32
    y: u32;
}
